# stucoin-backend

./: .gitignore  Cargo.toml  README.md
.github/workflows/: provision_ec2.yml  release.yml  rust.yml
bff_service/: Cargo.toml  Dockerfile
bff_service/src/: main.rs
charts/stucoin-backend/: Chart.yaml  values.yaml
hello-world-service/: Cargo.toml  Dockerfile
hello-world-service/proto/: hello_world.proto
hello_world_service/: Cargo.toml  Dockerfile
hello_world_service/src/: client.rs
src/hello-world-service/: Dockerfile
src/hello-world-service/src/: server.rs
stucoin-helm/: Chart.yaml  values.yaml
stucoin-helm/charts/bff_service/: Chart.yaml  values.yaml
stucoin-helm/charts/bff_service/templates/: _helpers.tpl  deployment.yaml  service.yaml
stucoin-helm/charts/hello-world/: Chart.yaml  values.yaml
stucoin-helm/charts/hello-world/templates/: _helpers.tpl  deployment.yaml  service.yaml
stucoin-helm/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
stucoin-helm/templates/tests/: test-connection.yaml
terraform/: main.tf  outputs.tf  variables.tf
