[package]
name = "bff_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "bff_service"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
prost = "0.12.3"
tonic = "0.10.2"

[dependencies.hello_world_service]
git = "https://github.com/cpprian/stucoin-backend"

[build-dependencies]
tonic-build = "0.10.2"